Add Matchups title

--- a/DotaCounterPicker.Server/Pages/FetchData.razor
+++ b/DotaCounterPicker.Server/Pages/FetchData.razor
@@ -11,10 +11,7 @@
 @inject IHeroLoader HeroLoader
 @inject HeroParser HeroParser
 
-<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from a service.</p>
-
+<p>Matchups</p>
 
 @if (_isBusy)
 {
