align titles in center

--- a/DotaCounterPicker.Server/Pages/FetchData.razor
+++ b/DotaCounterPicker.Server/Pages/FetchData.razor
@@ -10,7 +10,7 @@
 @inject IHeroLoader HeroLoader
 @inject HeroParser HeroParser
 
-<h1>Matchups</h1>
+<h1  class="text-center">Matchups</h1>
 
 @if (_isBusy)
 {
