--- a/DotaCounterPicker.Server/Pages/Index.razor
+++ b/DotaCounterPicker.Server/Pages/Index.razor
@@ -6,10 +6,8 @@
 @inject IModalService ModalService
 <PageTitle>Index</PageTitle>
 
-
-<h1>Enemy heroes</h1>
-
-<div class="row justify-content-start">
+<h1 class="text-center">Enemy heroes</h1>
+<div class="row justify-content-center">
     @for (int i = 0; i < _heroes.Length; i++)
     {
         var heroIndex = i;
