--- a/DotaCounterPicker.Server/Pages/FetchData.razor
+++ b/DotaCounterPicker.Server/Pages/FetchData.razor
@@ -18,7 +18,8 @@
 }
 else
 {
-    <table class="table table-striped">
+
+    <table class="table table-striped mx-auto w-auto">
         <thead>
             <tr>
                 <th>Name</th>
